fix popup overflow

--- a/src/components/Popup.module.scss
+++ b/src/components/Popup.module.scss
@@ -18,6 +18,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 
   background-color: #fff;
 
